deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapi-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapi-backend
  template:
    metadata:
      labels:
        app: testapi-backend
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: api-server
          image: testapi.azurecr.io/test-api:v5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: '256Mi'
              # Sửa từ 500m xuống 250m hoặc 100m
              cpu: '100m'
            requests:
              # Thêm dòng này (hoặc sửa nếu có) để K8s dễ xếp lịch hơn
              cpu: '50m'
              memory: '128Mi'
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: testapi-backend
  ports:
    - port: 80 # Cổng nội bộ trong Cluster
      targetPort: 3000 # Cổng Node.js đang lắng nghe
